--- a/express_app/views/login.ejs
+++ b/express_app/views/login.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Registration Page</title>
+    <title>Login Page</title>
   </head>
   <body>
-    <h1>Registration</h1>
-    <form method="POST" action="/register">
+    <h1>Login</h1>
+    <form method="POST" action="/login">
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" required>
 
