--- a/express_app/views/register.ejs
+++ b/express_app/views/register.ejs
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Registration Page</title>
+    <title>KisanMitr - Registration Page</title>
   </head>
   <body>
     <h1>Registration</h1>
-    <form method="POST" action="/register">
+    <form method="POST">
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" required>
 
       <label for="role">Role:</label>
       <select id="role" name="role" required>
         <option value="" disabled selected>Select role</option>
-        <option value="Farmer">Farmer</option>
-        <option value="Distributor">Distributor</option>
-        <option value="Nodal Agency">Nodal Agency</option>
+        <option value="farmer">Farmer</option>
+        <option value="distributor">Distributor</option>
+        <option value="nodalAgency">Nodal Agency</option>
       </select>
 
       <button type="submit">Submit</button>
