--- a/express_app/views/login.ejs
+++ b/express_app/views/login.ejs
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Login Page</title>
+    <title>KisanMitr - Login Page</title>
   </head>
   <body>
     <h1>Login</h1>
-    <form method="POST" action="/login">
+    <form method="POST">
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" required>
-
+      <label for="phone">Phone:</label>
+      <input type="text" id="phone" name="phone" required>
       <label for="role">Role:</label>
       <select id="role" name="role" required>
         <option value="" disabled selected>Select role</option>
-        <option value="Farmer">Farmer</option>
-        <option value="Distributor">Distributor</option>
-        <option value="Nodal Agency">Nodal Agency</option>
+        <option value="farmer">farmer</option>
+        <option value="distributor">distributor</option>
+        <option value="nodalAgency">nodalAgency</option>
       </select>
+      
 
       <button type="submit">Submit</button>
     </form>
