--- a/express_app/views/distributor/distributor-verify-otp.ejs
+++ b/express_app/views/distributor/distributor-verify-otp.ejs
@@ -2,17 +2,72 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Verify OTP</title>
+  <title>Verify OTP - Distributor</title>
+  <style>
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+      background-color: #f2f2f2;
+    }
+
+    h1 {
+      color: #444444;
+      text-align: center;
+      margin-top: 50px;
+    }
+
+    form {
+      max-width: 500px;
+      margin: auto;
+      padding: 20px;
+      background-color: #ffffff;
+      border-radius: 5px;
+      box-shadow: 0px 0px 10px #bbbbbb;
+    }
+
+    label {
+      display: block;
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+
+    input[type=text] {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 20px;
+      border: none;
+      border-radius: 3px;
+      box-sizing: border-box;
+      box-shadow: 0px 0px 5px #bbbbbb;
+    }
+
+    button[type=submit] {
+      background-color: #4CAF50;
+      color: #ffffff;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 3px;
+      cursor: pointer;
+      font-size: 16px;
+      float: right;
+    }
+
+    button[type=submit]:hover {
+      background-color: #3e8e41;
+    }
+
+    .message {
+      color: red;
+      margin-top: 10px;
+    }
+  </style>
 </head>
 <body>
   <h1>Verify OTP</h1>
-  <% if (message) { %>
-    <p><%= message %></p>
-  <% } %>
+  <!--% if (message) { %>
+    <p class="message"><%= message %></p>
+  <% } %-->
   <form action="/distributor-verify-otp" method="POST">
-    <label for="otp">OTP:</label>
+    <label for="otp">Enter OTP:</label>
     <input type="text" id="otp" name="otp" required>
     <button type="submit">Verify OTP</button>
   </form>
